# geodesic_destination

./: AUDIT_SUMMARY.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: destination.rs  paris.rs
