[package]
name = "geodesic_destination"
version = "0.1.1"
edition = "2021"
description = "Compute the destination point for a bearing and distance on a spherical Earth."
license = "MIT OR Apache-2.0"
repository = "https://github.com/thmsgntz/geodesic_destination"
readme = "README.md"
keywords = ["geodesy", "geodesic", "navigation", "bearing", "gps"]
categories = ["science", "mathematics"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "geodesic_destination"
path = "src/lib.rs"

[dependencies]
